--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -20,8 +20,16 @@
   font-weight: 700;
 }
 
-.text {
-  cursor: pointer;
+.link {
+  font-size: 24px;
+  font-weight: 700;
+  text-decoration: none;
+  color: inherit;
+  transition: all 0.5s ease;
+
+  &:hover {
+    color: var(--main-color);
+  }
 }
 
 .text-active {
