--- a/src/pages/dashboard/dashboard.module.css
+++ b/src/pages/dashboard/dashboard.module.css
@@ -3,25 +3,44 @@
   flex: 1;
   flex-direction: column;
   align-items: center;
-  background-color: #dadada;
 }
 
 .topPanel {
   background-color: #ffffff;
-  padding: 20px;
+  padding: 40px;
   display: flex;
   flex-direction: column;
-  border-radius: 50px;
+  border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  margin-top: 50px;
+  margin-top: 10px;
 }
 
 .topIcons {
+  display: flex;
+  gap: 30px;
+}
 
+.item {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  font-size: 12px;
+}
+
+.icons {
+  height: 40px;
+  cursor: pointer;
 }
 
 .balance {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
 
+.bold {
+  font-weight: bold;
 }
 
 .mainPanel {}
